# bigdata-briefs

./: .coveragerc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  REVIEW_LATEST_CHANGES.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  fly.yml  test.yml
assets/raw/: isometric-diagram.fossflow.json
bigdata_briefs/: __init__.py  __main__.py  exceptions.py  llm_client.py  metrics.py  models.py  service.py  settings.py  sql_models.py  storage.py  templates.py  utils.py  weighted_semaphore.py
bigdata_briefs/api/: app.py  examples.py  models.py  secure.py  sql_models.py  storage.py  utils.py
bigdata_briefs/attribution/: models.py  sources.py
bigdata_briefs/novelty/: embedding_client.py  models.py  novelty_service.py  sql_models.py  storage.py
bigdata_briefs/prompts/: prompt_loader.py  prompts.yaml  user_prompts.py
bigdata_briefs/query_service/: api.py  base.py  models.py  query_service.py  rate_limit.py  sdk.py
bigdata_briefs/static/scripts/: audit_table.js  company_browser.js  config_panel.js  csv_upload.js  database_status.js  debug_tab.js  form.js  load_example.js  report_renderer.js  tab_controller.js  topics_selector.js  validators.js  visualization.js
bigdata_briefs/templates/api/: base.html.jinja  frontend.html.jinja  index.html.jinja
bigdata_briefs/tracing/: service.py
tests/: conftest.py  test_llm_client.py  test_service.py  test_storage.py  test_utils.py  test_weighted_semaphore.py
tests/test_api/: test_secure.py
tests/test_query_service/: test_rate_limit.py
(+3 files in other folders)
