[project]
name = "bigdata_briefs"
version = "1.0.0"
description = "Generate briefs based on finantially relevant information from Bigdata.com "
authors = [{name = "jaldana", email = "jaldana@ravenpack.com"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.2.1",
    "jinja2==3.1.6",
    "openai>=1.95.0",
    "numpy>=2.2.4",
    "pyyaml>=6.0.2",
    "json-repair>=0.40.0",
    "structlog>=25.4.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "bigdata-client==2.18.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "freezegun==1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bigdata_briefs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
